# alpinefaction

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  feature_request.md
.github/workflows/: ci.yml
common/: CMakeLists.txt
common/src/: HttpRequest.cpp
crash_handler/: CrashReportApp.cpp  MiniDumpHelper.cpp  config.h
crash_handler/res/: CrashHandler.manifest  resources.rc  resources2.rc
crash_handler_stub/: WatchDogTimer.cpp
docs/: BUILDING.md  CHANGELOG.md
editor_patch/: CMakeLists.txt  alpine_obj.cpp  alpine_obj.h  bag.cpp  bag.h  bitmap_loaders.cpp  bitmap_loaders.h  corona.cpp  corona.h  event.cpp  event.h  events.cpp  exports.h  geometry.cpp  geometry.h  graphics.cpp  level.cpp  level.h  lightmap.cpp  main.cpp  mesh.cpp  mesh.h  mesh_export.cpp  meshes.cpp  meshes.h  mfc_types.h  note.cpp  note.h  resources.h  resources.rc  textures.cpp  textures.h  trigger.cpp  vtypes.h
game_patch/: CMakeLists.txt
game_patch/bmpman/: atx.cpp  atx.h  bmpman.cpp  dds.cpp  stb_image_loader.cpp  stb_image_loader.h
game_patch/debug/: debug.cpp  debug_cmd.cpp  debug_internal.h  debugwinmsg.cpp  profiler.cpp  unresponsive.cpp
game_patch/fflink/: fflink.cpp  fflink.h  fflink_achievements.cpp  fflink_achievements.h  fflink_session.cpp  fflink_session.h  fflink_utils.cpp  fflink_utils.h
game_patch/graphics/: bink.cpp  gr.cpp  gr.h  gr_font.cpp  gr_internal.h  gr_light.cpp
game_patch/hud/: hud.cpp  hud.h  hud_colors.cpp  hud_internal.h  hud_personas.cpp  hud_scale.cpp  hud_status.cpp  hud_weapon_bar.cpp  hud_weapon_bar.h  hud_weapons.cpp  hud_world.cpp  hud_world.h  multi_hud.cpp  multi_hud_chat.cpp  multi_hud_killfeed.cpp  multi_scoreboard.cpp  multi_scoreboard.h  multi_spectate.cpp  multi_spectate.h  remote_server_cfg_ui.cpp  remote_server_cfg_ui.h  weapon_select.cpp
game_patch/input/: input.h  key.cpp  mouse.cpp  mouse.h
game_patch/main/: main.cpp  main.h
game_patch/misc/: achievements.cpp  achievements.h  alpine_options.cpp  alpine_options.h  alpine_settings.cpp  alpine_settings.h  camera.cpp  character.cpp  dashoptions.cpp  dashoptions.h  destruction.cpp  destruction.h  g_solid.cpp  game.cpp  level.cpp  level.h  main_menu.cpp  misc.cpp  misc.h  player.cpp  player.h  player_fpgun.cpp  save_restore.cpp  spray_picker.cpp  spray_picker.h  string.cpp  string.h  tlv.h  ui.cpp  vpackfile.cpp  vpackfile.h  waypoints.cpp  waypoints.h  waypoints_internal.h  waypoints_utils.cpp  waypoints_utils.h
game_patch/multi/: alpine_packets.cpp  alpine_packets.h  bagman.cpp  bagman.h  commands.cpp  dedi_cfg.cpp  dedi_cfg_legacy.cpp  endgame_votes.cpp  endgame_votes.h  faction_files.cpp  faction_files.h  gametype.cpp  gametype.h  kill.cpp  kill.h  level_download.cpp  lms.cpp  lms.h  multi.cpp  multi.h  multi_ban.cpp  multi_private.h  multi_tdm.cpp  network.cpp  network.h  projectile_lag_comp.cpp  projectile_lag_comp.h  rounds.cpp  rounds.h  server.cpp  server.h  server_internal.h  sprays.cpp  sprays.h  vehicle.cpp  vehicle.h  votes.cpp
game_patch/object/: alpine_bag.cpp  alpine_bag.h  alpine_corona.cpp  alpine_corona.h  alpine_mesh.cpp  clock.cpp  cutscene.cpp  entity.cpp  event.cpp  event_alpine.cpp  event_alpine.h  glare.cpp  item.cpp  monitor.cpp  mover.cpp  mover.h  obj_light.cpp  object.cpp  object.h  object_private.h  particle.cpp  trigger.cpp  weapon.cpp
game_patch/os/: console.cpp  (+11 more)
launcher/: AboutDlg.cpp  AlpineFactionLauncher.rc  CMakeLists.txt  DashFactionLauncher.rc  DownloadProgressDlg.cpp  DownloadProgressDlg.h  FFLinkHelper.cpp  FFLinkHelper.h  FFLinkProgressDlg.cpp  FFLinkProgressDlg.h  FFLinkReminderDlg.cpp  FFLinkReminderDlg.h  ImageButton.cpp  ImageButton.h  LauncherApp.cpp  LauncherApp.h  LauncherCommandLineInfo.h  MainDlg.cpp  MainDlg.h  OptionsAudioDlg.cpp  OptionsDisplayDlg.cpp  OptionsDisplayDlg.h  OptionsDlg.cpp  OptionsDlg.h  OptionsGraphicsDlg.cpp  OptionsInputDlg.cpp  OptionsInterfaceDlg.cpp  OptionsMiscDlg.cpp  OptionsMiscDlg.h  OptionsMultiplayerDlg.cpp  OptionsMultiplayerDlg.h  faction_files.cpp  faction_files.h  main.cpp  resource.h  stdafx.cpp
launcher/res/: AlpineFactionLauncher.manifest  launcher.rc2
launcher_common/: InjectingProcessLauncher.cpp  InjectingProcessLauncher.h  PatchedAppLauncher.cpp  UpdateChecker.cpp  VideoDeviceInfoProviderD3D11.cpp  VideoDeviceInfoProviderD3D8.cpp
resources/: CMakeLists.txt  events.tbl  licensing-info.txt  maps_df.txt
resources/images/: Icon_AFBag.tga  Icon_AFCorona.tga  Icon_AFNote.tga  Icon_Event.tga  af_achtrophy1.tga  af_powerup-bag.vbm  af_wh_bag_hold.tga  af_wh_bag_take.tga  af_wh_ctf_blue_a.tga  af_wh_ctf_blue_d.tga  af_wh_ctf_blue_s.tga  af_wh_ctf_red_a.tga  af_wh_ctf_red_d.tga  af_wh_ctf_red_s.tga  af_wh_koth_atk_blue.tga  af_wh_koth_atk_neutral.tga  af_wh_koth_atk_red.tga  af_wh_koth_base_blue.tga  af_wh_koth_base_neutral.tga  af_wh_koth_base_red.tga  af_wh_koth_cont_blue.tga  af_wh_koth_cont_neutral.tga  af_wh_koth_cont_red.tga  af_wh_koth_def_blue.tga  af_wh_koth_def_neutral.tga  af_wh_koth_def_red.tga  af_wh_koth_fill_blue.tga  af_wh_koth_fill_red.tga  af_wh_koth_lock_blue.tga  af_wh_koth_lock_neutral.tga  af_wh_koth_lock_red.tga  af_wh_koth_ring_fade.tga  af_wh_mp_spawn.tga  af_wh_ping1.tga  afsbi_brow.tga  afsbi_brow_1.tga  afsbi_idle.tga  afsbi_idle_1.tga  afsbi_spec.tga  afsbi_spec_1.tga  (+24 more)
resources/meshes/: af_pickup-bag.v3m
resources/shaders/: CMakeLists.txt  character_vs.hlsl  outline_character_vs.hlsl  outline_ps.hlsl  outline_standard_vs.hlsl  shadow_character_vs.hlsl  shadow_debug_ps.hlsl  shadow_standard_vs.hlsl  standard_ps.hlsl  standard_vs.hlsl  ui_ps.hlsl
resources/tables/: DM-Catan-Field_info.tbl  Dm-NukeTown2050_info.tbl  af_level_quirks.tbl  events.tbl  maps_df.txt
resources/waypoints/: ctf01.awp  ctf02.awp  ctf03.awp  ctf04.awp  ctf05.awp  ctf06.awp  ctf07.awp  dm01.awp  dm02.awp  dm03.awp  dm04.awp  dm05.awp  dm06.awp  dm07.awp  dm08.awp  dm09.awp  dm10.awp  dm11.awp  dm12.awp  dm13.awp  dm14.awp  dm15.awp  dm16.awp  dm17.awp  dm18.awp  dm19.awp  dm20.awp
setup/: setup.iss
tools/: CMakeLists.txt  addr2line.sh
(+169 files in other folders)
